--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "dependencies": {
     "@lit-labs/preact-signals": "^1.0.2",
     "htmx.org": "^2.0.1",
-    "lit": "^3.1.4",
+    "lit": "^3.1.4"
   }
 }
