--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "@lit-labs/preact-signals": "^1.0.2",
+    "@lit-labs/router": "^0.1.3",
     "htmx.org": "^2.0.1",
     "lit": "^3.1.4"
   }
